--- a/RafaelTestsApp/app/src/main/AndroidManifest.xml
+++ b/RafaelTestsApp/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".DisplayMessageActivity"
-            android:exported="false" />
-        <activity android:name=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:exported="true" />
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
