Successfully opening phone's camera

--- a/CameraApp/app/src/main/AndroidManifest.xml
+++ b/CameraApp/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="com.example.cameraapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
         android:allowBackup="true"
@@ -16,7 +17,9 @@
         <activity
             android:name=".SurveilanceActivity"
             android:parentActivityName=".MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true">
