--- a/CameraApp/app/build.gradle
+++ b/CameraApp/app/build.gradle
@@ -22,6 +22,11 @@ android {
         }
     }
     buildToolsVersion '32.0.0'
+
+    packagingOptions {
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/io.netty.versions.properties'
+    }
 }
 
 dependencies {
@@ -32,4 +37,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Grpc
+    implementation 'io.grpc:grpc-netty:1.45.0'
+    implementation 'io.grpc:grpc-protobuf:1.45.0'
+    implementation 'io.grpc:grpc-stub:1.45.0'
+
+    //Grpc generated files
+    implementation files('../../GrpcContract/target/communication-1.0.0.jar')
 }
