Started creating Central System System System message receiving

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,10 @@ lint/tmp/
 # lint/reports/
 
 Notebooks/.ipynb_checkpoints
+CentralSystem/.idea/inspectionProfiles/profiles_settings.xml
+CentralSystem/.idea/modules.xml
+CentralSystem/.idea/misc.xml
+CentralSystem/.idea/inspectionProfiles/profiles_settings.xml
+CentralSystem/.idea/modules.xml
+CentralSystem/.idea/misc.xml
+CentralSystem/.idea/inspectionProfiles/profiles_settings.xml
