--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ CentralSystem/.idea/inspectionProfiles/profiles_settings.xml
 CentralSystem/.idea/modules.xml
 CentralSystem/.idea/misc.xml
 CentralSystem/.idea/inspectionProfiles/profiles_settings.xml
+CentralSystem/data/footageStorage.pickle
