--- a/MasterOfMissingStuff/app/src/main/AndroidManifest.xml
+++ b/MasterOfMissingStuff/app/src/main/AndroidManifest.xml
@@ -17,6 +17,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AddItemActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity"
+        />
+        <activity
+            android:name=".ItemActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".AddItemActivity"
+        />
     </application>
 
 </manifest>
